# parallelBLK

./: .gitignore
MPI/: CMakeLists.txt  TODO  ipgather.cpp  mpi_isend.cpp  scatter_gather.c  send_rcv.c
MPI/clientserver/: CMakeLists.txt  client.c  cliente.c  manager.c  server.c  serverdor.c  worker.c
OpenCL/: tips.md
OpenCL/1_HelloWorld/: CMakeLists.txt  OCLHelloWorld.cpp
OpenCL/1_SimpleAdd/: CMakeLists.txt  SimpleAdd.cpp
benchmark/mpi_openmp/: CMakeLists.txt  test.cpp
cuda/: README.md
cuda/1DStencil/: 1dstencil.ppt
cuda/HelloWorld/: hello.cu
cuda/Jacobi_Optimization/: Instruction.ppt  README
cuda/Jacobi_Optimization/solution/: definitions.cuh  kernel.cu  main.cu
cuda/MVM/: main.cpp  main_naive.cu  main_shared.cu  main_warp.cu  makefile
cuda/SPMV/: Makefile  Matrix_markets.txt  README.md  evaluationa.sh  evaluationb.sh  main.c  mmio.c  spmv.cuh  spmv_design_opt.cu  spmv_design_opt_graph.cu  spmv_graph.cu  spmv_segment.cu  vector_generator.sh
cuda/SSSP/SSSPCode/: Makefile  README.txt  bittest.c  entry_point.cu  evaluation.sh  evaluation2.sh  evaluation3.sh  impl1.cu  impl2.cu  impl3.cu  initial_graph.cuh  opt.cu  parse_graph.cu  parse_graph.cuh  user_specified_structures.cuh
cuda/VectorAdd/Answer/: answer.cu
cuda/cudamemory/: arr  arrc.c  shared-memory.cu  te  temp  temp.c
cuda/matrixtranspose/: matrixOriginal.cu
cuda/segmentscan/: makefile  segscan_efficient.cu  segscan_naive.cu  segscan_naive_sharmem.cu
cuda/threadid/: testthreadid.cu
openMP/: extradefine.c  helloworld.c  parallel_for.c  reduction.c
(+1 files in other folders)
